--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,5 +11,8 @@
 <body>
     {% block body %}
     {% endblock %}
+    
+    <script src="https://unpkg.com/htmx.org@2.0.4" integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+" crossorigin="anonymous"></script>
+
 </body>
 </html>
