--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,4 +7,8 @@
 
 {% block body %}
   Hello User
+
+  <h2>
+    <a href="{{ url_for('examples.examples') }}">Examples</a>
+  </h2>
 {% endblock body %}
