add example hover and click + hold ctrl

--- a/app/templates/examples/examples.html
+++ b/app/templates/examples/examples.html
@@ -10,6 +10,9 @@
         <li>
             <a href="{{ url_for('examples.ping') }}">Examples Ping</a>
         </li>
+        <li>
+            <a href="{{ url_for("examples.hover") }}">Hover</a>
+        </li>
     </ul>
 
     <hr>
