--- a/app/templates/clicker/clicker.html
+++ b/app/templates/clicker/clicker.html
@@ -8,11 +8,21 @@
 
 {% block body %}
     <h3>Clicker</h3>
+    <div>
+        <div id="clicked-times">
+            {% include "clicker/components/_clicker-count.html" %}
+        </div>
+        <button
+            hx-post="{{ url_for('clicker.click') }}"
+            hx-target="#clicked-times"
+        >Click!</button>    
+    </div>
 
-
-    <form action="{{ url_for("clicker.click") }}" method="POST">
-        <div>Clicked Times: {{ count }}</div>
-        <button type="sumbit">Click</button>
+    <h3>Form Clicker</h3>
+    <form action="{{ url_for('clicker.click') }}" method="POST" name="value">
+        <div>Clicked Times {{ form_count }}</div>
+        <button type="submit">Click!</button>
     </form>
+
     {% include "components/_footer.html" %}
 {% endblock body %}
