--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,11 +9,14 @@
   <h2>
     <a href="{{ url_for('examples.examples') }}">Examples</a>
   </h2>
+  <h3>
+    <a href="{{ url_for('products.get_product_list') }}">Products</a>
+  </h3>
   <span
     hx-trigger="load"
     hx-get="{{ url_for('clicker.click') }}"
     hx-swap="outerHTML">Click</span>
   <h4>
     <a href="{{ url_for('clicker.click') }}">Clicker</a>
-  </h4s>
+  </h4>
 {% endblock body %}
