--- a/app/templates/products/list.html
+++ b/app/templates/products/list.html
@@ -6,9 +6,20 @@
 
 {% block body %}
     <h1>Products</h1>
+    <div>
+        <form action="{{ url_for('products.create_product') }}" method="POST">
+            <p><label for="name">Имя: </label><input type="text" name="name" id="product-name" required></p>
+            <p><label for="price">Цена: </label><input type="number" name="price" id="product-price" min="1" max="9999999" required></p>
+            <button type="sumbmit">Создать</button>
+        </form>
+
+    </div>
     <ul>
             {% for product in list_products%}  
                 <li>{{ product.name }} ${{ product.price }}</li>
             {% endfor %}
     </ul>
+
+    {% include 'components/_footer.html' %}
+
 {% endblock body %}
