create and render new product

--- a/app/templates/products/components/_products-list.html
+++ b/app/templates/products/components/_products-list.html
@@ -1,5 +1,5 @@
 <ul id="products-list">
     {% for product in list_products%}  
-        <li>{{ product.name }} ${{ product.price }}</li>
+        {% include "products/components/_item.html" %}
     {% endfor %}
 </ul>
