--- a/app/templates/products/list.html
+++ b/app/templates/products/list.html
@@ -10,7 +10,7 @@
         <form 
             hx-post="{{ url_for('products.create_product') }}"
             hx-target="#products-list"
-            hx-swap="outerHTML"
+            hx-swap="beforeend" 
             hx-on::after-request="if (event.detail.successful) this.reset()"
         >
             <label for="name">Имя: </label><input type="text" name="name" id="product-name" required>
