--- a/app/templates/products/list.html
+++ b/app/templates/products/list.html
@@ -7,23 +7,11 @@
 {% block body %}
     <h1>Products</h1>
     <div>
-        <form 
-            hx-post="{{ url_for('products.create_product') }}"
-            hx-target="#products-list"
-            hx-swap="beforeend" 
-            hx-on::after-request="if (event.detail.successful) this.reset()"
-        >
-            <label for="name">Имя: </label><input type="text" name="name" id="product-name" required>
-            <label for="price">Цена: </label><input type="number" name="price" id="product-price" min="1" max="9999999" required>
-            <button type="submit">Add</button>
-        </form>
+        {% include "products/components/_form.html" %}
     </div>
-
         {% include "products/components/_products-list.html" %}
 
 
     {% include 'components/_footer.html' %}
-
-    <script src="https://unpkg.com/htmx.org@2.0.4" integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+" crossorigin="anonymous"></script>
 
 {% endblock body %}
