--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,22 +22,22 @@
     crossorigin="anonymous">
     </script>
     <script type="text/javascript">
-        document.addEventListener("DOMContentLoaded", (event) => {
-          document.body.addEventListener('htmx:beforeSwap', function (evt) {
-            if (evt.detail.xhr.status === 422) {
-              // allow 422 responses to swap
-              // as we are using this as a signal
-              // that a form was submitted with bad data
-              // and want to rerender with the errors
-              //
-              // set isError to `false`
-              // to avoid error logging in console
-              evt.detail.shouldSwap = true;
-              evt.detail.isError = false;
-            }
-          });
+      document.addEventListener("DOMContentLoaded", (event) => {
+        document.body.addEventListener('htmx:beforeSwap', function (evt) {
+          if ([204, 422].indexOf(evt.detail.xhr.status) >= 0) {
+            // allow 422 responses to swap
+            // as we are using this as a signal
+            // that a form was submitted with bad data
+            // and want to rerender with the errors
+            //
+            // set isError to `false`
+            // to avoid error logging in console
+            evt.detail.shouldSwap = true;
+            evt.detail.isError = false;
+          }
         });
-      </script>
+      });
+    </script>
 
 </body>
 </html>
