--- a/app/templates/products/components/_item.html
+++ b/app/templates/products/components/_item.html
@@ -1,1 +1,12 @@
-<li>{{ product.name }} ${{ product.price }}</li>
+<li>{{ product.name }} ${{ product.price }}
+    <button 
+        style="cursor: pointer;"
+        hx-delete="{{ url_for('products.delete_product', id=product.id) }}"    
+        hx-headers='{"X-CSRF-TOKEN": "{{ csrf_token() }}"}'
+        hx-target="closest li"
+        hx-swap="outerHTML"
+    >
+        <img width="15px" src="{{ url_for('static', filename='images/trash.png') }}" alt="img">
+    </button>
+        
+</li>
