loading and fading animation

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,7 @@
     <title>
         {% block title %}{% endblock %}
     </title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/loading.css') }}">
 </head>
 <body>
     {% block body %}
