--- a/app/templates/products/components/_item.html
+++ b/app/templates/products/components/_item.html
@@ -1,7 +1,9 @@
 <li 
     id="product-{{ product.id }}"
     class="product-item fade-me-out"
->
-    {{ product.name }} ${{ product.price }}
+>   
+    <a href="{{ url_for('products.get_product_detail', product_id=product.id) }}">
+        {{ product.name }} ${{ product.price }}
+    </a>
     {% include "products/components/_delete_button.html" %}        
 </li>
