--- a/app/templates/products/components/_delete_button-details.html
+++ b/app/templates/products/components/_delete_button-details.html
@@ -5,6 +5,7 @@
     hx-indicator="#loading"
     hx-push-url="true"
     hx-target="body"
+    hx-confirm="Are you sure you want to delete this product?"
     >
     <p>
         DELETE
